--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test --exit",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "nodemon": "^1.19.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
     "express": "^4.15.3",
     "mocha": "^3.4.2",
-    "moment": "^2.18.1",
+    "moment": "^2.24.0",
     "sinon": "^2.3.8"
   }
 }
